@@ -7,7 +7,7 @@ Full documentation is available on-line at
 This code is released under the MIT Licence see the Copyright file.
 
 To report bugs, follow the instructions at: 
-  http://xmlsoft.org/XSLT/bug.html
+  http://xmlsoft.org/bugs.html
 
 A mailing-list xml@gnome.org is available, to subscribe:
     http://mail.gnome.org/mailman/listinfo/xml
